⛲️🚁 Checkpoint ./game.html:41497361/1671 ./about.html:41497361/821 ./styles.css:41497361/271

--- a/about.html
+++ b/about.html
@@ -43,6 +43,25 @@
         friends or going out and enjoying the world! <br />
         Feel free to reach out to me on any platform, if not, email me for
         futher inquiries.</h2>
+        <br />
+        <a
+        class="icon prezz"
+        href="https://www.instagram.com/quint_ple/"
+        target="_blank"
+        ><img
+          src="https://cdn.glitch.global/88cbc14b-86da-4a30-ae07-53657b096bb7/iconmonstr-instagram-11-64.png?v=1646774298789"
+          alt="Instagram Link"
+      /></a>
+      <a class="icon prezz" href="https://twitter.com/quint_ple" target="_blank"
+        ><img
+          src="https://cdn.glitch.global/88cbc14b-86da-4a30-ae07-53657b096bb7/iconmonstr-twitter-1-64.png?v=1646774310353"
+          alt="Twitter Link"
+      /></a>
+      <a class="icon prezz" href="mailto:quint.ple@gmail.com" target="_blank"
+        ><img
+          src="https://cdn.glitch.global/88cbc14b-86da-4a30-ae07-53657b096bb7/iconmonstr-email-1-64.png?v=1646774312361"
+          alt="Email"
+      /></a>
       </div>
     </main>
     <footer>
