🌑🚦 Checkpoint ./styles.css:41497361/1652 ./about.html:41497361/343

--- a/about.html
+++ b/about.html
@@ -67,7 +67,12 @@
       /></a>
     </main>
     <footer>
-      
+      <nav>
+        <a class="buttonfunc press" href="game.html">Play My Game</a>
+
+        <a class="buttonfunc press" href="port.html">Portfolio</a>
+
+      </nav>
       <div class="🍗">
         <p class="copyright">
           Copyright ©
