Rewound to commit 768ab829d42b5593f632481bf08027e1df9fe1f0 + 0 edits

--- a/game.html
+++ b/game.html
@@ -5,11 +5,7 @@
     <title>Mooby's Misadventures</title>
     <meta name="description" content="The main page" />
     <meta name="author" content="Pedro M. Gonzalez" />
-    <link
-      rel="icon"
-      type="image/png"
-      href="https://cdn.glitch.global/7991a611-6cc7-4f4e-9079-fe77ce4bc020/moobyicon?v=1651622948936"
-    />
+    <link rel="icon" type="image/png" href="https://cdn.glitch.com/a9975ea6-8949-4bab-addb-8a95021dc2da%2Fillustration.svg?v=1618177344016" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -20,57 +16,22 @@
   </head>
   <body>
     <header>
-      <div>
-        <a href="index.html"
-          ><img
-            class="🌮"
-            src="https://cdn.glitch.global/7991a611-6cc7-4f4e-9079-fe77ce4bc020/Name%20Banner.png?v=1651016729859"
-            alt="The Taco Stand"
-        /></a>
-      </div>
+      HEADER
+      <nav>
+        <a href="about.html">About Me</a>
+        <a href="port.html">Portfolio</a>
+        <a href="index.html">Home</a>
+      </nav>
     </header>
-    <main>
-      <h1 class="🍏">MOOBY'S MISADVENTURE!</h1>
-      <div class="wrapper" style="margin-top: 90px;">
-        <div class="h_iframe">
-          <iframe
-            frameborder="0"
-            src="https://itch.io/embed-upload/2301967?color=f9d2fe"
-            allowfullscreen=""
-            width="2"
-            height="2"
-            ><a
-              href="https://quintuple.itch.io/moobys-misadventure"
-              class="selfie2"
-              >If you are see this, unfortunetly your browser cant handle my
-              game... bummer :(</a
-            ></iframe
-          >
-          
-        </div>
-      </div>
-      <h2 class="🍊">
- Arrow Keys / WASD = Move
-<br />
-Z/J = A Button
-<br />
-K/X = B Button
-<br />
-Enter/M = Start
-<br />
-Shift = Select</h2>
-    </main>
-
+    <main>MAIN CONTENT</main>
     <footer>
-      <div class="🍗">
-        <p class="copyright">
-          Copyright ©
-          <script>
-            document.write(new Date().getFullYear());
-          </script>
-          Pedro M. Gonzalez All Rights Reserved
-        </p>
-      </div>
+      <p>
+        Copyright ©
+        <script>
+          document.write(new Date().getFullYear());
+        </script>
+        NAME All Rights Reserved
+      </p>
     </footer>
   </body>
 </html>
