--- a/port.html
+++ b/port.html
@@ -8,7 +8,7 @@
     <link
       rel="icon"
       type="image/png"
-      href="https://cdn.glitch.global/7991a611-6cc7-4f4e-9079-fe77ce4bc020/porticon?v=1651622942036"
+      href="https://cdn.glitch.com/a9975ea6-8949-4bab-addb-8a95021dc2da%2Fillustration.svg?v=1618177344016"
     />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -31,129 +31,284 @@
     </header>
     <main>
       <h1 class="🍏">MY PORTFOLIO!</h1>
-      <h2 class="🍎">Look Around! Stay A While!</h2>
-      <div id="gallery" style="margin-top: 70px">
+      <div id="gallery">
         <img
           src="https://cdn.glitch.global/7991a611-6cc7-4f4e-9079-fe77ce4bc020/ADAM_FEUTS.png?v=1652822388544"
+          onclick="openModal();currentSlide(1)"
+          class="hover-shadow"
         /><img
           src="https://cdn.glitch.global/7991a611-6cc7-4f4e-9079-fe77ce4bc020/AP_CommissonFINAL.png?v=1652822603260"
+          onclick="openModal();currentSlide(1)"
+          class="hover-shadow"
         /><img
           src="https://cdn.glitch.global/7991a611-6cc7-4f4e-9079-fe77ce4bc020/Bean.png?v=1652822609429"
+          onclick="openModal();currentSlide(1)"
+          class="hover-shadow"
         /><img
           src="https://cdn.glitch.global/7991a611-6cc7-4f4e-9079-fe77ce4bc020/Bike_Final_Poster.png?v=1652822836502"
+          onclick="openModal();currentSlide(1)"
+          class="hover-shadow"
         /><img
           src="https://cdn.glitch.global/7991a611-6cc7-4f4e-9079-fe77ce4bc020/Brochure_final-01.png?v=1652822856301"
+          onclick="openModal();currentSlide(1)"
+          class="hover-shadow"
         /><img
           src="https://cdn.glitch.global/7991a611-6cc7-4f4e-9079-fe77ce4bc020/CASUAL_MOUTH.gif?v=1652822879699"
+          onclick="openModal();currentSlide(1)"
+          class="hover-shadow"
         /><video width="320" height="320" controls>
           <source
             src="https://cdn.glitch.global/7991a611-6cc7-4f4e-9079-fe77ce4bc020/E710B9C5-878C-4302-B5A8-D4756400864E.mp4?v=1652822945107"
             type="video/mp4"
           />
-          Your browser does not support the video tag.</video
-        ><img
+          Your browser does not support the video tag.
+        </video><img
           src="https://cdn.glitch.global/7991a611-6cc7-4f4e-9079-fe77ce4bc020/Flynn_CommV1.2.png?v=1652823024399"
+          onclick="openModal();currentSlide(1)"
+          class="hover-shadow"
         /><img
           src="https://cdn.glitch.global/7991a611-6cc7-4f4e-9079-fe77ce4bc020/Glitter_Core_Logo.png?v=1652823039789"
+          onclick="openModal();currentSlide(1)"
+          class="hover-shadow"
         /><img
           src="https://cdn.glitch.global/7991a611-6cc7-4f4e-9079-fe77ce4bc020/Glitter_Core_LogoB.png?v=1652823054154"
+          onclick="openModal();currentSlide(1)"
+          class="hover-shadow"
         /><img
           src="https://cdn.glitch.global/7991a611-6cc7-4f4e-9079-fe77ce4bc020/Illustration2.png?v=1652823069045"
+          onclick="openModal();currentSlide(1)"
+          class="hover-shadow"
         /><img
           src="https://cdn.glitch.global/7991a611-6cc7-4f4e-9079-fe77ce4bc020/IMG_0945.png?v=1652823087495"
+          onclick="openModal();currentSlide(1)"
+          class="hover-shadow"
         /><img
           src="https://cdn.glitch.global/7991a611-6cc7-4f4e-9079-fe77ce4bc020/IMG_0948.png?v=1652823083286"
+          onclick="openModal();currentSlide(1)"
+          class="hover-shadow"
         /><img
           src="https://cdn.glitch.global/7991a611-6cc7-4f4e-9079-fe77ce4bc020/IMG_0949.png?v=1652823114761"
+          onclick="openModal();currentSlide(1)"
+          class="hover-shadow"
         /><img
           src="https://cdn.glitch.global/7991a611-6cc7-4f4e-9079-fe77ce4bc020/IMG_0950.png?v=1652823133156"
+          onclick="openModal();currentSlide(1)"
+          class="hover-shadow"
         /><img
           src="https://cdn.glitch.global/7991a611-6cc7-4f4e-9079-fe77ce4bc020/IMG_0951.png?v=1652823150671"
+          onclick="openModal();currentSlide(1)"
+          class="hover-shadow"
         /><video width="320" height="320" controls>
           <source
             src="https://cdn.glitch.global/7991a611-6cc7-4f4e-9079-fe77ce4bc020/ImportVideo_153896.881606.mp4?v=1652823218527"
             type="video/mp4"
           />
-          Your browser does not support the video tag.</video
-        ><video width="360" height="640" controls>
+          Your browser does not support the video tag.
+        </video><video width="360" height="640" controls>
           <source
             src="https://cdn.glitch.global/7991a611-6cc7-4f4e-9079-fe77ce4bc020/ImportVideo_153934.006721.mp4?v=1652823280399"
             type="video/mp4"
           />
-          Your browser does not support the video tag.</video
-        ><img
+          Your browser does not support the video tag.
+        </video><img
           src="https://cdn.glitch.global/7991a611-6cc7-4f4e-9079-fe77ce4bc020/JD_POSTER_SNUGF2.png?v=1652823313066"
-          onclick="openModal();currentSlide(16)"
+          onclick="openModal();currentSlide(1)"
           class="hover-shadow"
         /><img
           src="https://cdn.glitch.global/7991a611-6cc7-4f4e-9079-fe77ce4bc020/Kirby_Gym_Shirts.png?v=1652823328913"
+          onclick="openModal();currentSlide(1)"
+          class="hover-shadow"
         /><img
           src="https://cdn.glitch.global/7991a611-6cc7-4f4e-9079-fe77ce4bc020/limeupA.png?v=1652823346204"
+          onclick="openModal();currentSlide(1)"
+          class="hover-shadow"
         /><img
           src="https://cdn.glitch.global/7991a611-6cc7-4f4e-9079-fe77ce4bc020/Living_Color_TShirt.png?v=1652823360498"
+          onclick="openModal();currentSlide(1)"
+          class="hover-shadow"
         /><img
           src="https://cdn.glitch.global/7991a611-6cc7-4f4e-9079-fe77ce4bc020/Me_Gif2.png?v=1652823377807"
+          onclick="openModal();currentSlide(1)"
+          class="hover-shadow"
         /><img
           src="https://cdn.glitch.global/7991a611-6cc7-4f4e-9079-fe77ce4bc020/MM.png?v=1652823399330"
+          onclick="openModal();currentSlide(1)"
+          class="hover-shadow"
         /><img
           src="https://cdn.glitch.global/7991a611-6cc7-4f4e-9079-fe77ce4bc020/Mooby_FB.png?v=1652823413575"
+          onclick="openModal();currentSlide(1)"
+          class="hover-shadow"
         /><img
           src="https://cdn.glitch.global/7991a611-6cc7-4f4e-9079-fe77ce4bc020/Party_Poster_F2.png?v=1652823431692"
+          onclick="openModal();currentSlide(1)"
+          class="hover-shadow"
         /><img
           src="https://cdn.glitch.global/7991a611-6cc7-4f4e-9079-fe77ce4bc020/Pearl.png?v=1652823452752"
+          onclick="openModal();currentSlide(1)"
+          class="hover-shadow"
         /><img
           src="https://cdn.glitch.global/7991a611-6cc7-4f4e-9079-fe77ce4bc020/Screenshot_150.png?v=1652823470193"
+          onclick="openModal();currentSlide(1)"
+          class="hover-shadow"
         /><img
           src="https://cdn.glitch.global/7991a611-6cc7-4f4e-9079-fe77ce4bc020/Screenshot_151.png?v=1652823487145"
+          onclick="openModal();currentSlide(1)"
+          class="hover-shadow"
         /><img
           src="https://cdn.glitch.global/7991a611-6cc7-4f4e-9079-fe77ce4bc020/Screenshot_152.png?v=1652823505562"
+          onclick="openModal();currentSlide(1)"
+          class="hover-shadow"
         /><img
-          src="https://cdn.glitch.global/7991a611-6cc7-4f4e-9079-fe77ce4bc020/Screenshot_153.png?v=1652823542400"
+          src="img1.jpg"
+          onclick="openModal();currentSlide(1)"
+          class="hover-shadow"
         /><img
-          src="https://cdn.glitch.global/7991a611-6cc7-4f4e-9079-fe77ce4bc020/Screenshot_154.png?v=1652823557044"
+          src="img1.jpg"
+          onclick="openModal();currentSlide(1)"
+          class="hover-shadow"
         /><img
-          src="https://cdn.glitch.global/7991a611-6cc7-4f4e-9079-fe77ce4bc020/Screenshot_155.png?v=1652823570664"
+          src="img1.jpg"
+          onclick="openModal();currentSlide(1)"
+          class="hover-shadow"
         /><img
-          src="https://cdn.glitch.global/7991a611-6cc7-4f4e-9079-fe77ce4bc020/SEND_COPY_Server_Banner_ORG.png?v=1652823585886"
+          src="img1.jpg"
+          onclick="openModal();currentSlide(1)"
+          class="hover-shadow"
         /><img
-          src="https://cdn.glitch.global/7991a611-6cc7-4f4e-9079-fe77ce4bc020/SEND_COPY_Server_Invites.png?v=1652823600226"
+          src="img1.jpg"
+          onclick="openModal();currentSlide(1)"
+          class="hover-shadow"
         /><img
-          src="https://cdn.glitch.global/7991a611-6cc7-4f4e-9079-fe77ce4bc020/SEND_COPY_Server_Logo_REG.png?v=1652823614125"
+          src="img1.jpg"
+          onclick="openModal();currentSlide(1)"
+          class="hover-shadow"
         /><img
-          src="https://cdn.glitch.global/7991a611-6cc7-4f4e-9079-fe77ce4bc020/Server_Logo_Template.png?v=1652823636358"
+          src="img1.jpg"
+          onclick="openModal();currentSlide(1)"
+          class="hover-shadow"
         /><img
-          src="https://cdn.glitch.global/7991a611-6cc7-4f4e-9079-fe77ce4bc020/SPOILER_unknown.png?v=1652823653957"
+          src="img1.jpg"
+          onclick="openModal();currentSlide(1)"
+          class="hover-shadow"
         /><img
-          src="https://cdn.glitch.global/7991a611-6cc7-4f4e-9079-fe77ce4bc020/St._Patricks_Party.png?v=1652823670510"
+          src="img1.jpg"
+          onclick="openModal();currentSlide(1)"
+          class="hover-shadow"
         /><img
-          src="https://cdn.glitch.global/7991a611-6cc7-4f4e-9079-fe77ce4bc020/tjfinal.png?v=1652823686209"
+          src="img1.jpg"
+          onclick="openModal();currentSlide(1)"
+          class="hover-shadow"
         /><img
-          src="https://cdn.glitch.global/7991a611-6cc7-4f4e-9079-fe77ce4bc020/TP.png?v=1652823704236"
+          src="img1.jpg"
+          onclick="openModal();currentSlide(1)"
+          class="hover-shadow"
         /><img
-          src="https://cdn.glitch.global/7991a611-6cc7-4f4e-9079-fe77ce4bc020/TRHS2.png?v=1652823723955"
+          src="img1.jpg"
+          onclick="openModal();currentSlide(1)"
+          class="hover-shadow"
         /><img
-          src="https://cdn.glitch.global/7991a611-6cc7-4f4e-9079-fe77ce4bc020/unkndfcown.png?v=1652823739543"
+          src="img1.jpg"
+          onclick="openModal();currentSlide(1)"
+          class="hover-shadow"
         /><img
-          src="https://cdn.glitch.global/7991a611-6cc7-4f4e-9079-fe77ce4bc020/Us.png?v=1652823756788"
+          src="img1.jpg"
+          onclick="openModal();currentSlide(1)"
+          class="hover-shadow"
         /><img
-          src="https://cdn.glitch.global/7991a611-6cc7-4f4e-9079-fe77ce4bc020/VILX-WR.png?v=1652823770903"
+          src="img1.jpg"
+          onclick="openModal();currentSlide(1)"
+          class="hover-shadow"
         /><img
-          src="https://cdn.glitch.global/7991a611-6cc7-4f4e-9079-fe77ce4bc020/Wigi.png?v=1652823788289"
+          src="img1.jpg"
+          onclick="openModal();currentSlide(1)"
+          class="hover-shadow"
         /><img
-          src="https://cdn.glitch.global/7991a611-6cc7-4f4e-9079-fe77ce4bc020/YUNQUELOGO.png?v=1652823802276"
+          src="img1.jpg"
+          onclick="openModal();currentSlide(1)"
+          class="hover-shadow"
         />
+      </div>
+
+      <!-- The Modal/Lightbox -->
+      <div id="myModal" class="modal">
+        <span class="close cursor" onclick="closeModal()">&times;</span>
+        <div class="modal-content">
+          <div class="mySlides">
+            <div class="numbertext">1 / 4</div>
+            <img src="https://cdn.glitch.global/7991a611-6cc7-4f4e-9079-fe77ce4bc020/ADAM_FEUTS.png?v=1652822388544" style="width: 100%" />
+          </div>
+
+          <div class="mySlides">
+            <div class="numbertext">2 / 4</div>
+            <img src="https://cdn.glitch.global/7991a611-6cc7-4f4e-9079-fe77ce4bc020/AP_CommissonFINAL.png?v=1652822603260" style="width: 100%" />
+          </div>
+
+          <div class="mySlides">
+            <div class="numbertext">3 / 4</div>
+            <img src="img3_wide.jpg" style="width: 100%" />
+          </div>
+
+          <div class="mySlides">
+            <div class="numbertext">4 / 4</div>
+            <img src="img4_wide.jpg" style="width: 100%" />
+          </div>
+
+          <!-- Next/previous controls -->
+          <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
+          <a class="next" onclick="plusSlides(1)">&#10095;</a>
+
+          <!-- Caption text -->
+          <div class="caption-container">
+            <p id="caption"></p>
+          </div>
+
+          <!-- Thumbnail image controls -->
+          <div class="column">
+            <img
+              class="demo"
+              src="https://cdn.glitch.global/7991a611-6cc7-4f4e-9079-fe77ce4bc020/ADAM_FEUTS.png?v=1652822388544"
+              onclick="currentSlide(1)"
+              alt="Adam"
+            />
+          </div>
+
+          <div class="column">
+            <img
+              class="demo"
+              src="https://cdn.glitch.global/7991a611-6cc7-4f4e-9079-fe77ce4bc020/AP_CommissonFINAL.png?v=1652822603260"
+              onclick="currentSlide(2)"
+              alt="Snow"
+            />
+          </div>
+
+          <div class="column">
+            <img
+              class="demo"
+              src="img3.jpg"
+              onclick="currentSlide(3)"
+              alt="Mountains"
+            />
+          </div>
+
+          <div class="column">
+            <img
+              class="demo"
+              src="img4.jpg"
+              onclick="currentSlide(4)"
+              alt="Lights"
+            />
+          </div>
+        </div>
       </div>
     </main>
     <footer>
-      <div class="🍗">
-        <p class="copyright">
-          Copyright ©
-          <script>
-            document.write(new Date().getFullYear());
-          </script>
-          Pedro M. Gonzalez All Rights Reserved
-        </p>
-      </div>
+      <p>
+        Copyright ©
+        <script>
+          document.write(new Date().getFullYear());
+        </script>
+        NAME All Rights Reserved
+      </p>
     </footer>
   </body>
 </html>
