--- a/about.html
+++ b/about.html
@@ -5,7 +5,7 @@
     <title>About Me! - And Other Facts</title>
     <meta name="description" content="The main page" />
     <meta name="author" content="Pedro M. Gonzalez" />
-    <link rel="icon" type="image/png" href="https://cdn.glitch.global/7991a611-6cc7-4f4e-9079-fe77ce4bc020/aboutmeicon?v=1651622943465" />
+    <link rel="icon" type="image/png" href="https://cdn.glitch.com/a9975ea6-8949-4bab-addb-8a95021dc2da%2Fillustration.svg?v=1618177344016" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -23,7 +23,6 @@
             src="https://cdn.glitch.global/7991a611-6cc7-4f4e-9079-fe77ce4bc020/Name%20Banner.png?v=1651016729859"
             alt="The Taco Stand"
         /></a>
-        
       </div>
     </header>
     <main>
@@ -44,35 +43,9 @@
         friends or going out and enjoying the world! <br />
         Feel free to reach out to me on any platform, if not, email me for
         futher inquiries.</h2>
-        <br />
-        
       </div>
-      <a
-        class="icon prezz"
-        href="https://www.instagram.com/quint_ple/"
-        target="_blank"
-        ><img
-          src="https://cdn.glitch.global/88cbc14b-86da-4a30-ae07-53657b096bb7/iconmonstr-instagram-11-64.png?v=1646774298789"
-          alt="Instagram Link"
-      /></a>
-      <a class="icon prezz" href="https://twitter.com/quint_ple" target="_blank"
-        ><img
-          src="https://cdn.glitch.global/88cbc14b-86da-4a30-ae07-53657b096bb7/iconmonstr-twitter-1-64.png?v=1646774310353"
-          alt="Twitter Link"
-      /></a>
-      <a class="icon prezz" href="mailto:quint.ple@gmail.com" target="_blank"
-        ><img
-          src="https://cdn.glitch.global/88cbc14b-86da-4a30-ae07-53657b096bb7/iconmonstr-email-1-64.png?v=1646774312361"
-          alt="Email"
-      /></a>
     </main>
     <footer>
-      <nav>
-        <a class="buttonfunc press" href="game.html">Play My Game</a>
-
-        <a class="buttonfunc press" href="port.html">Portfolio</a>
-
-      </nav>
       <div class="🍗">
         <p class="copyright">
           Copyright ©
