--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link
       rel="icon"
       type="image/png"
-      href="https://cdn.glitch.com/a9975ea6-8949-4bab-addb-8a95021dc2da%2Fillustration.svg?v=1618177344016"
+      href="https://cdn.glitch.global/7991a611-6cc7-4f4e-9079-fe77ce4bc020/Me_Gif2.png?v=1652823377807"
     />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -64,21 +64,21 @@
       <div class="slideshow-container" style="margin-top: 88px">
         <div class="mySlides fade">
           <img
-            src="https://cdn.glitch.global/7991a611-6cc7-4f4e-9079-fe77ce4bc020/aboutmeicon?v=1651622943465"
+            src="https://cdn.glitch.global/7991a611-6cc7-4f4e-9079-fe77ce4bc020/JD_POSTER_SNUGF2.png?v=1652823313066"
             style="width: 100%"
           />
         </div>
 
         <div class="mySlides fade">
           <img
-            src="https://cdn.glitch.global/7991a611-6cc7-4f4e-9079-fe77ce4bc020/porticon?v=1651622942036"
+            src="https://cdn.glitch.global/7991a611-6cc7-4f4e-9079-fe77ce4bc020/tjfinal.png?v=1652823686209"
             style="width: 100%"
           />
         </div>
 
         <div class="mySlides fade">
           <img
-            src="https://cdn.glitch.global/7991a611-6cc7-4f4e-9079-fe77ce4bc020/moobyicon?v=1651622948936"
+            src="https://cdn.glitch.global/7991a611-6cc7-4f4e-9079-fe77ce4bc020/St._Patricks_Party.png?v=1652823670510"
             style="width: 100%"
           />
         </div>
