Rewound to commit b18d2468f8b77fa500ee02c22e06f7b0834fb10a + 0 edits

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link
       rel="icon"
       type="image/png"
-      href="https://cdn.glitch.global/7991a611-6cc7-4f4e-9079-fe77ce4bc020/Me_Gif2.png?v=1652823377807"
+      href="https://cdn.glitch.com/a9975ea6-8949-4bab-addb-8a95021dc2da%2Fillustration.svg?v=1618177344016"
     />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -21,110 +21,45 @@
   </head>
   <body>
     <header>
-      <div>
-        <a href="index.html"
-          ><img
-            class="🌮"
-            src="https://cdn.glitch.global/7991a611-6cc7-4f4e-9079-fe77ce4bc020/Name%20Banner.png?v=1651016729859"
-            alt="The Taco Stand"
-        /></a>
-      </div>
-    </header>
-    <main>
       <h1 class="🍏">WELCOME!</h1>
-      <h2 class="🍎">Select A Menu Option To Continue...</h2>
       <nav>
         <a href="about.html"
           ><img
-            class="🍐 🌀 🌑"
-            src="https://cdn.glitch.global/7991a611-6cc7-4f4e-9079-fe77ce4bc020/aboutmeicon?v=1651622943465"
+            class="🍐"
+            src="https://cdn.glitch.global/7991a611-6cc7-4f4e-9079-fe77ce4bc020/TEMPHD.png?v=1650411046753"
             alt="About Me"
-          />
-          <h2 class="🔍 🌕">Learn About Me!</h2></a
-        >
+        /></a>
         <a href="port.html"
           ><img
-            class="🍐 🌀 🌑"
-            src="https://cdn.glitch.global/7991a611-6cc7-4f4e-9079-fe77ce4bc020/porticon?v=1651622942036"
-            alt="Portfolio"
-          />
-          <h2 class="🔍 🌕">My Portfolio!</h2></a
-        >
+            class="🍐"
+            src="https://cdn.glitch.global/7991a611-6cc7-4f4e-9079-fe77ce4bc020/TEMPFD.png?v=1650411050407"
+            alt="Portfolio" /></a
+        ><br />
         <a href="game.html"
           ><img
-            class="🍐 🌀 🌑"
-            src="https://cdn.glitch.global/7991a611-6cc7-4f4e-9079-fe77ce4bc020/moobyicon?v=1651622948936"
+            class="🍐"
+            src="https://cdn.glitch.global/7991a611-6cc7-4f4e-9079-fe77ce4bc020/TEMPGB.png?v=1650411041817"
             alt="Play My Game!"
-          />
-          <h2 class="🔍 🌕">Play My Game!</h2></a
-        >
+        /></a>
       </nav>
+    </header>
+    <main>
+      <marquee
+        class="GeneratedMarquee"
+        direction="left"
+        scrollamount="10"
+        behavior="scroll"
+        >Here's What's New ...</marquee
+      >
     </main>
     <footer>
-      <div class="slideshow-container" style="margin-top: 88px">
-        <div class="mySlides fade">
-          <img
-            src="https://cdn.glitch.global/7991a611-6cc7-4f4e-9079-fe77ce4bc020/JD_POSTER_SNUGF2.png?v=1652823313066"
-            style="width: 100%"
-          />
-        </div>
-
-        <div class="mySlides fade">
-          <img
-            src="https://cdn.glitch.global/7991a611-6cc7-4f4e-9079-fe77ce4bc020/tjfinal.png?v=1652823686209"
-            style="width: 100%"
-          />
-        </div>
-
-        <div class="mySlides fade">
-          <img
-            src="https://cdn.glitch.global/7991a611-6cc7-4f4e-9079-fe77ce4bc020/St._Patricks_Party.png?v=1652823670510"
-            style="width: 100%"
-          />
-        </div>
-
-        <a class="prev" onclick="plusSlides(-1)">❮</a>
-        <a class="next" onclick="plusSlides(1)">❯</a>
-      </div>
-      <script>
-        let slideIndex = 1;
-        showSlides(slideIndex);
-
-        function plusSlides(n) {
-          showSlides((slideIndex += n));
-        }
-
-        function currentSlide(n) {
-          showSlides((slideIndex = n));
-        }
-
-        function showSlides(n) {
-          let i;
-          let slides = document.getElementsByClassName("mySlides");
-          let dots = document.getElementsByClassName("dot");
-          if (n > slides.length) {
-            slideIndex = 1;
-          }
-          if (n < 1) {
-            slideIndex = slides.length;
-          }
-          for (i = 0; i < slides.length; i++) {
-            slides[i].style.display = "none";
-          }
-          for (i = 0; i < dots.length; i++) {
-            dots[i].className = dots[i].className.replace(" active", "");
-          }
-          slides[slideIndex - 1].style.display = "block";
-          dots[slideIndex - 1].className += " active";
-        }
-      </script>
-        <p class="copyright">
-          Copyright ©
-          <script>
-            document.write(new Date().getFullYear());
-          </script>
-          Pedro M. Gonzalez All Rights Reserved
-        </p>
+      <p class="copyright">
+        Copyright ©
+        <script>
+          document.write(new Date().getFullYear());
+        </script>
+        Pedro M. Gonzalez All Rights Reserved
+      </p>
     </footer>
   </body>
 </html>
