Rewound to commit 6579f20a2cd6a266fb389721bf6ebd25ab9f0483 + 0 edits

--- a/port.html
+++ b/port.html
@@ -5,7 +5,11 @@
     <title>The Portfolio - Enjoy!</title>
     <meta name="description" content="The main page" />
     <meta name="author" content="Pedro M. Gonzalez" />
-    <link rel="icon" type="image/png" href="https://cdn.glitch.com/a9975ea6-8949-4bab-addb-8a95021dc2da%2Fillustration.svg?v=1618177344016" />
+    <link
+      rel="icon"
+      type="image/png"
+      href="https://cdn.glitch.global/7991a611-6cc7-4f4e-9079-fe77ce4bc020/porticon?v=1651622942036"
+    />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -16,22 +20,140 @@
   </head>
   <body>
     <header>
-      HEADER
       <nav>
-        <a href="about.html">About Me</a>
-        <a href="index.html">Home</a>
-        <a href="game.html">Play My Game!</a>
+        <a href="index.html"
+          ><img
+            class="🌮"
+            src="https://cdn.glitch.global/7991a611-6cc7-4f4e-9079-fe77ce4bc020/Name%20Banner.png?v=1651016729859"
+            alt="The Taco Stand"
+        /></a>
       </nav>
     </header>
-    <main>MAIN CONTENT</main>
+    <main>
+      <h1 class="🍏">MY PORTFOLIO!</h1>
+      <h2 class="🍎">Look Around! Stay A While!</h2>
+      <div id="gallery" style="margin-top: 70px">
+        <img
+          src="https://cdn.glitch.global/7991a611-6cc7-4f4e-9079-fe77ce4bc020/ADAM_FEUTS.png?v=1652822388544"
+        /><img
+          src="https://cdn.glitch.global/7991a611-6cc7-4f4e-9079-fe77ce4bc020/AP_CommissonFINAL.png?v=1652822603260"
+        /><img
+          src="https://cdn.glitch.global/7991a611-6cc7-4f4e-9079-fe77ce4bc020/Bean.png?v=1652822609429"
+        /><img
+          src="https://cdn.glitch.global/7991a611-6cc7-4f4e-9079-fe77ce4bc020/Bike_Final_Poster.png?v=1652822836502"
+        /><img
+          src="https://cdn.glitch.global/7991a611-6cc7-4f4e-9079-fe77ce4bc020/Brochure_final-01.png?v=1652822856301"
+        /><img
+          src="https://cdn.glitch.global/7991a611-6cc7-4f4e-9079-fe77ce4bc020/CASUAL_MOUTH.gif?v=1652822879699"
+        /><video width="320" height="320" controls>
+          <source
+            src="https://cdn.glitch.global/7991a611-6cc7-4f4e-9079-fe77ce4bc020/E710B9C5-878C-4302-B5A8-D4756400864E.mp4?v=1652822945107"
+            type="video/mp4"
+          />
+          Your browser does not support the video tag.</video
+        ><img
+          src="https://cdn.glitch.global/7991a611-6cc7-4f4e-9079-fe77ce4bc020/Flynn_CommV1.2.png?v=1652823024399"
+        /><img
+          src="https://cdn.glitch.global/7991a611-6cc7-4f4e-9079-fe77ce4bc020/Glitter_Core_Logo.png?v=1652823039789"
+        /><img
+          src="https://cdn.glitch.global/7991a611-6cc7-4f4e-9079-fe77ce4bc020/Glitter_Core_LogoB.png?v=1652823054154"
+        /><img
+          src="https://cdn.glitch.global/7991a611-6cc7-4f4e-9079-fe77ce4bc020/Illustration2.png?v=1652823069045"
+        /><img
+          src="https://cdn.glitch.global/7991a611-6cc7-4f4e-9079-fe77ce4bc020/IMG_0945.png?v=1652823087495"
+        /><img
+          src="https://cdn.glitch.global/7991a611-6cc7-4f4e-9079-fe77ce4bc020/IMG_0948.png?v=1652823083286"
+        /><img
+          src="https://cdn.glitch.global/7991a611-6cc7-4f4e-9079-fe77ce4bc020/IMG_0949.png?v=1652823114761"
+        /><img
+          src="https://cdn.glitch.global/7991a611-6cc7-4f4e-9079-fe77ce4bc020/IMG_0950.png?v=1652823133156"
+        /><img
+          src="https://cdn.glitch.global/7991a611-6cc7-4f4e-9079-fe77ce4bc020/IMG_0951.png?v=1652823150671"
+        /><video width="320" height="320" controls>
+          <source
+            src="https://cdn.glitch.global/7991a611-6cc7-4f4e-9079-fe77ce4bc020/ImportVideo_153896.881606.mp4?v=1652823218527"
+            type="video/mp4"
+          />
+          Your browser does not support the video tag.</video
+        ><video width="360" height="640" controls>
+          <source
+            src="https://cdn.glitch.global/7991a611-6cc7-4f4e-9079-fe77ce4bc020/ImportVideo_153934.006721.mp4?v=1652823280399"
+            type="video/mp4"
+          />
+          Your browser does not support the video tag.</video
+        ><img
+          src="https://cdn.glitch.global/7991a611-6cc7-4f4e-9079-fe77ce4bc020/JD_POSTER_SNUGF2.png?v=1652823313066"
+          onclick="openModal();currentSlide(16)"
+          class="hover-shadow"
+        /><img
+          src="https://cdn.glitch.global/7991a611-6cc7-4f4e-9079-fe77ce4bc020/Kirby_Gym_Shirts.png?v=1652823328913"
+        /><img
+          src="https://cdn.glitch.global/7991a611-6cc7-4f4e-9079-fe77ce4bc020/limeupA.png?v=1652823346204"
+        /><img
+          src="https://cdn.glitch.global/7991a611-6cc7-4f4e-9079-fe77ce4bc020/Living_Color_TShirt.png?v=1652823360498"
+        /><img
+          src="https://cdn.glitch.global/7991a611-6cc7-4f4e-9079-fe77ce4bc020/Me_Gif2.png?v=1652823377807"
+        /><img
+          src="https://cdn.glitch.global/7991a611-6cc7-4f4e-9079-fe77ce4bc020/MM.png?v=1652823399330"
+        /><img
+          src="https://cdn.glitch.global/7991a611-6cc7-4f4e-9079-fe77ce4bc020/Mooby_FB.png?v=1652823413575"
+        /><img
+          src="https://cdn.glitch.global/7991a611-6cc7-4f4e-9079-fe77ce4bc020/Party_Poster_F2.png?v=1652823431692"
+        /><img
+          src="https://cdn.glitch.global/7991a611-6cc7-4f4e-9079-fe77ce4bc020/Pearl.png?v=1652823452752"
+        /><img
+          src="https://cdn.glitch.global/7991a611-6cc7-4f4e-9079-fe77ce4bc020/Screenshot_150.png?v=1652823470193"
+        /><img
+          src="https://cdn.glitch.global/7991a611-6cc7-4f4e-9079-fe77ce4bc020/Screenshot_151.png?v=1652823487145"
+        /><img
+          src="https://cdn.glitch.global/7991a611-6cc7-4f4e-9079-fe77ce4bc020/Screenshot_152.png?v=1652823505562"
+        /><img
+          src="https://cdn.glitch.global/7991a611-6cc7-4f4e-9079-fe77ce4bc020/Screenshot_153.png?v=1652823542400"
+        /><img
+          src="https://cdn.glitch.global/7991a611-6cc7-4f4e-9079-fe77ce4bc020/Screenshot_154.png?v=1652823557044"
+        /><img
+          src="https://cdn.glitch.global/7991a611-6cc7-4f4e-9079-fe77ce4bc020/Screenshot_155.png?v=1652823570664"
+        /><img
+          src="https://cdn.glitch.global/7991a611-6cc7-4f4e-9079-fe77ce4bc020/SEND_COPY_Server_Banner_ORG.png?v=1652823585886"
+        /><img
+          src="https://cdn.glitch.global/7991a611-6cc7-4f4e-9079-fe77ce4bc020/SEND_COPY_Server_Invites.png?v=1652823600226"
+        /><img
+          src="https://cdn.glitch.global/7991a611-6cc7-4f4e-9079-fe77ce4bc020/SEND_COPY_Server_Logo_REG.png?v=1652823614125"
+        /><img
+          src="https://cdn.glitch.global/7991a611-6cc7-4f4e-9079-fe77ce4bc020/Server_Logo_Template.png?v=1652823636358"
+        /><img
+          src="https://cdn.glitch.global/7991a611-6cc7-4f4e-9079-fe77ce4bc020/SPOILER_unknown.png?v=1652823653957"
+        /><img
+          src="https://cdn.glitch.global/7991a611-6cc7-4f4e-9079-fe77ce4bc020/St._Patricks_Party.png?v=1652823670510"
+        /><img
+          src="https://cdn.glitch.global/7991a611-6cc7-4f4e-9079-fe77ce4bc020/tjfinal.png?v=1652823686209"
+        /><img
+          src="https://cdn.glitch.global/7991a611-6cc7-4f4e-9079-fe77ce4bc020/TP.png?v=1652823704236"
+        /><img
+          src="https://cdn.glitch.global/7991a611-6cc7-4f4e-9079-fe77ce4bc020/TRHS2.png?v=1652823723955"
+        /><img
+          src="https://cdn.glitch.global/7991a611-6cc7-4f4e-9079-fe77ce4bc020/unkndfcown.png?v=1652823739543"
+        /><img
+          src="https://cdn.glitch.global/7991a611-6cc7-4f4e-9079-fe77ce4bc020/Us.png?v=1652823756788"
+        /><img
+          src="https://cdn.glitch.global/7991a611-6cc7-4f4e-9079-fe77ce4bc020/VILX-WR.png?v=1652823770903"
+        /><img
+          src="https://cdn.glitch.global/7991a611-6cc7-4f4e-9079-fe77ce4bc020/Wigi.png?v=1652823788289"
+        /><img
+          src="https://cdn.glitch.global/7991a611-6cc7-4f4e-9079-fe77ce4bc020/YUNQUELOGO.png?v=1652823802276"
+        />
+      </div>
+    </main>
     <footer>
-      <p>
-        Copyright ©
-        <script>
-          document.write(new Date().getFullYear());
-        </script>
-        NAME All Rights Reserved
-      </p>
+      <div class="🍗">
+        <p class="copyright">
+          Copyright ©
+          <script>
+            document.write(new Date().getFullYear());
+          </script>
+          Pedro M. Gonzalez All Rights Reserved
+        </p>
+      </div>
     </footer>
   </body>
 </html>
