🌕💗 Checkpoint ./game.html:41497361/4260

--- a/game.html
+++ b/game.html
@@ -31,7 +31,7 @@
     </header>
     <main>
       <h1 class="🍏">MOOBY'S MISADVENTURE!</h1>
-      <div class="wrapper" style="margin-top: 90px;">
+      <div class="wrapper" style="margin-top: 90px">
         <div class="h_iframe">
           <iframe
             frameborder="0"
@@ -46,19 +46,19 @@
               game... bummer :(</a
             ></iframe
           >
-          
         </div>
       </div>
       <h2 class="🍊">
- Arrow Keys / WASD = Move
-<br />
-Z/J = A Button
-<br />
-K/X = B Button
-<br />
-Enter/M = Start
-<br />
-Shift = Select</h2>
+        Arrow Keys / WASD = Move
+        <br />
+        Z/J = A Button
+        <br />
+        K/X = B Button
+        <br />
+        Enter/M = Start
+        <br />
+        Shift = Select
+      </h2>
     </main>
 
     <footer>
