🛩💪 Checkpoint ./about.html:41497361/133

--- a/about.html
+++ b/about.html
@@ -45,7 +45,12 @@
         Feel free to reach out to me on any platform, if not, email me for
         futher inquiries.</h2>
         <br />
-        
+        <h2 class="🍊">
+        Tools: <br />
+        Clip Studio Paint EX <br />
+        Aseprite <br />
+        Wacom Cintiq 16
+      </h2>
       </div>
       <a
         class="icon prezz"
