🌔🚃 Checkpoint ./about.html:41497361/1027 ./styles.css:41497361/661

--- a/about.html
+++ b/about.html
@@ -45,12 +45,7 @@
         Feel free to reach out to me on any platform, if not, email me for
         futher inquiries.</h2>
         <br />
-        <h2 class="🍊">
-        Tools: <br />
-        Clip Studio Paint EX <br />
-        Aseprite <br />
-        Wacom Cintiq 16
-      </h2>
+        
       </div>
       <a
         class="icon prezz"
@@ -72,7 +67,18 @@
       /></a>
     </main>
     <footer>
-      
+      <marquee
+        class="GeneratedMarquee"
+        direction="left"
+        scrollamount="10"
+        behavior="scroll"
+        ><h2 class="🍊">
+        Tools: <br />
+        Clip Studio Paint EX <br />
+        Aseprite <br />
+        Wacom Cintiq 16
+      </h2></marquee
+      >
       <div class="🍗">
         <p class="copyright">
           Copyright ©
