💖⛵️ Checkpoint ./about.html:41497361/326 ./styles.css:41497361/52

--- a/about.html
+++ b/about.html
@@ -72,12 +72,13 @@
         direction="left"
         scrollamount="10"
         behavior="scroll"
-        ><h2 class="🍊">
+        ><h2>
         Tools: <br />
         Clip Studio Paint EX <br />
         Aseprite <br />
         Wacom Cintiq 16
-      </h2></marquee
+      </h2>
+      </marquee
       >
       <div class="🍗">
         <p class="copyright">
