🧀🎩 Checkpoint ./port.html:41497361/68

--- a/port.html
+++ b/port.html
@@ -25,7 +25,7 @@
           ><img
             class="🌮"
             src="https://cdn.glitch.global/7991a611-6cc7-4f4e-9079-fe77ce4bc020/Name%20Banner.png?v=1651016729859"
-            alt="The Taco Stand"
+            alt="The Taco Stand" style="left: 100px;transform: translateX(-251px) translateY(-8px);"
         /></a>
       </nav>
     </header>
