👻🎥 Checkpoint ./about.html:41497361/19 ./game.html:41497361/129

--- a/about.html
+++ b/about.html
@@ -36,8 +36,9 @@
             alt="Picture of Myself"
         /></a>
         <h2 class="🍊">
- My name is Pedro! another alias I go by is Taco.
-        <br />I'm a Puerto Rican artist that's born in NY in '00. I'm inspired
+ My name is Pedro! Another alias I go by is Taco.
+        <br />I'm a Puerto Rican artist that's born in NY in '00. 
+          <br />I'm inspired
         by retro pop art and mid century modern graphic design.
         <br />
         When not working or learning new skills, I'm playing games with my
