--- a/game.html
+++ b/game.html
@@ -59,6 +59,9 @@
         <br />
         Shift = Select
       </h2>
+      <h3 class="🍗">
+        (If on mobile, click the itch.io icon to head to the main game page to play)
+      </h3>
     </main>
 
     <footer>
