🐘💐 Checkpoint ./.glitch-assets:41497361/3935 ./index.html:41497361/1709 ./port.html:41497361/20560

--- a/index.html
+++ b/index.html
@@ -64,21 +64,28 @@
       <div class="slideshow-container" style="margin-top: 88px">
         <div class="mySlides fade">
           <img
-            src="https://cdn.glitch.global/7991a611-6cc7-4f4e-9079-fe77ce4bc020/JD_POSTER_SNUGF2.png?v=1652823313066"
+            src="https://cdn.glitch.global/7991a611-6cc7-4f4e-9079-fe77ce4bc020/DEVELOPCRAFT.png?v=1671217422055"
             style="width: 100%"
           />
         </div>
 
         <div class="mySlides fade">
           <img
-            src="https://cdn.glitch.global/7991a611-6cc7-4f4e-9079-fe77ce4bc020/tjfinal.png?v=1652823686209"
+            src="https://cdn.glitch.global/7991a611-6cc7-4f4e-9079-fe77ce4bc020/REFLECT.png?v=1671217431609"
+            style="width: 100%"
+          />
+        </div>
+        
+        <div class="mySlides fade">
+          <img
+            src="https://cdn.glitch.global/7991a611-6cc7-4f4e-9079-fe77ce4bc020/STRECNANDEXPLORE.png?v=1671217436482"
             style="width: 100%"
           />
         </div>
 
         <div class="mySlides fade">
           <img
-            src="https://cdn.glitch.global/7991a611-6cc7-4f4e-9079-fe77ce4bc020/St._Patricks_Party.png?v=1652823670510"
+            src="https://cdn.glitch.global/7991a611-6cc7-4f4e-9079-fe77ce4bc020/EXPRESS.png?v=1671217425971"
             style="width: 100%"
           />
         </div>
