--- a/port.html
+++ b/port.html
@@ -25,7 +25,8 @@
           ><img
             class="🌮"
             src="https://cdn.glitch.global/7991a611-6cc7-4f4e-9079-fe77ce4bc020/Name%20Banner.png?v=1651016729859"
-            alt="The Taco Stand" style="left: 100px;transform: translateX(-251px) translateY(-8px);"
+            alt="The Taco Stand"
+            style="left: 100px; transform: translateX(-251px) translateY(-8px)"
         /></a>
       </nav>
     </header>
@@ -33,6 +34,36 @@
       <h1 class="🍏">MY PORTFOLIO!</h1>
       <h2 class="🍎">Look Around! Stay A While!</h2>
       <div id="gallery" style="margin-top: 70px">
+        <img
+          src="https://cdn.glitch.global/7991a611-6cc7-4f4e-9079-fe77ce4bc020/BYE%202FF.png?v=1671217379917"
+        />
+        <img
+          src="https://cdn.glitch.global/7991a611-6cc7-4f4e-9079-fe77ce4bc020/CJ%20BIRTHDYA%20PARTY.png?v=1671217389873"
+        />
+        <img
+          src="https://cdn.glitch.global/7991a611-6cc7-4f4e-9079-fe77ce4bc020/DEVELOPCRAFT.png?v=1671217422055"
+        />
+        <img
+          src="https://cdn.glitch.global/7991a611-6cc7-4f4e-9079-fe77ce4bc020/EXPRESS.png?v=1671217425971"
+        />
+        <img
+          src="https://cdn.glitch.global/7991a611-6cc7-4f4e-9079-fe77ce4bc020/REFLECT.png?v=1671217431609"
+        />
+        <img
+          src="https://cdn.glitch.global/7991a611-6cc7-4f4e-9079-fe77ce4bc020/STRECNANDEXPLORE.png?v=1671217436482"
+        />
+        <img
+          src="https://cdn.glitch.global/7991a611-6cc7-4f4e-9079-fe77ce4bc020/Untitled-1-03.png?v=1671217532379"
+        />
+        <img
+          src="https://cdn.glitch.global/7991a611-6cc7-4f4e-9079-fe77ce4bc020/chores.png?v=1671217621110"
+        />
+        <img
+          src="https://cdn.glitch.global/7991a611-6cc7-4f4e-9079-fe77ce4bc020/CHIPS.png?v=1671217628656"
+        />
+        <img
+          src="https://cdn.glitch.me/7991a611-6cc7-4f4e-9079-fe77ce4bc020/Untitled_Artwork.png?v=1671217660005"
+        />
         <img
           src="https://cdn.glitch.global/7991a611-6cc7-4f4e-9079-fe77ce4bc020/ADAM_FEUTS.png?v=1652822388544"
         /><img
